# NtApiExecutor

./: CMakeLists.txt  README.md
src/: main.cpp  nt_api_executor.cpp  nt_api_executor.hpp
src/misc/: typedefs.h
